<resources>
    <string name="app_name">Calculador de metales</string>
    <string name="tv_metal_profile">Selecciona la forma del metal</string>
    <string name="tv_round_pipe">Tubo Redondo</string>
    <string name="tv_channel">Canal</string>
    <string name="tv_hexagon_rod">Barra Hexagonal</string>
    <string name="tv_corner">Ángulo</string>
    <string name="tv_girders">Doble T</string>
    <string name="tv_stripe">Barra Plana Gruesa</string>
    <string name="tv_profile_pipe">Forma de tubo</string>
    <string name="tv_profile_rod">Barra Cuadrada</string>
    <string name="tv_round_rod">Barra Redonda</string>
    <string name="tv_sheet_metal">Sheet Metal</string>
    <string name="tv_dimensions">Dimensiones</string>
    <string name="tv_weight">Peso</string>
    <string name="tv_result">0</string>
    <string name="tv_metal_type">Selecciona el tipo de metal</string>

    <string name="et_enter_a">Ingresa A(mm)</string>
    <string name="et_enter_b">Ingresa B(mm)</string>
    <string name="et_enter_c">Ingresa C(mm)</string>
    <string name="et_enter_d">Ingresa D(mm)</string>
    <string name="et_enter_length">Ingresa long(m)</string>
    <string name="et_enter_thickness">Ingresa Espesor(mm)</string>

    <string name="ib_cd_round_pipe">Round Pipe Button</string>
    <string name="ib_cd_profile_pipe">Profile Pipe Button</string>
    <string name="ib_cd_round_rod">Round Rod Button</string>
    <string name="ib_cd_profile_rod">Profile Rod Button</string>
    <string name="ib_cd_hexagon_rod">Hexagon Rod Button</string>
    <string name="ib_cd_sheet_metal">Sheet Metal Button</string>
    <string name="ib_cd_corner">Corner Button</string>
    <string name="ib_cd_stripe">Stripe Button</string>
    <string name="ib_cd_channel">Channel Button</string>
    <string name="ib_cd_empty">Empty</string>
    <string name="ib_cd_girders">Girders Button</string>
    <string name="ib_cd_title">Title</string>
    <string name="ib_cd_dimension">Dimension image</string>
    <string name="btn_calculate">Calcular</string>
    <string name="btn_clear">Limpiar</string>


    <string-array name="metals">
        <item>Acero Carb</item>
        <item>Acero</item>
        <item>Hierro Fun.</item>
        <item>Aluminio</item>
        <item>Magnesio</item>
        <item>Titanio</item>
        <item>Cobre</item>
        <item>Latón</item>
        <item>Bronce</item>
        <item>Zinc</item>
        <item>Estaño</item>
        <item>Plomo</item>
    </string-array>


</resources>
