<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:paddingTop="4dp"
                android:text="@string/tv_channel"
                android:textColor="#000000"
                android:textSize="30sp"
                android:textStyle="bold"/>


            <ImageView
                android:layout_width="182dp"
                android:layout_height="177dp"
                android:layout_gravity="center"
                android:adjustViewBounds="true"
                android:contentDescription="@string/ib_cd_dimension"
                android:scaleType="centerInside"
                android:src="@drawable/img_channel"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:text="@string/tv_metal_type"
                android:textColor="#000000"
                android:textSize="16sp"
                android:textStyle="bold"/>

            <Spinner
                android:id="@+id/spinner_metal_type"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:dropDownSelector="#000000"
                android:entries="@array/metals"
                android:scrollbarAlwaysDrawVerticalTrack="true"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="4dp"
                    android:layout_weight="1"
                    android:orientation="vertical">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:padding="2dp"
                        android:text="@string/tv_dimensions"
                        android:textColor="#000000"
                        android:textSize="24sp"/>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:background="#000000"/>

                    <EditText
                        android:id="@+id/et_A_dimension"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/et_enter_a"
                        android:imeOptions="actionDone"
                        android:inputType="number"
                        android:singleLine="true"
                        android:textStyle="italic"/>

                    <EditText
                        android:id="@+id/et_B_dimension"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/et_enter_b"
                        android:imeOptions="actionDone"
                        android:inputType="number"
                        android:singleLine="true"
                        android:textStyle="italic"/>

                    <EditText
                        android:id="@+id/et_C_dimension"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/et_enter_c"
                        android:imeOptions="actionDone"
                        android:inputType="number"
                        android:singleLine="true"
                        android:textStyle="italic"/>

                    <EditText
                        android:id="@+id/et_D_dimension"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/et_enter_d"
                        android:imeOptions="actionDone"
                        android:inputType="number"
                        android:singleLine="true"
                        android:textStyle="italic"/>

                    <EditText
                        android:id="@+id/et_length"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/et_enter_length"
                        android:imeOptions="actionDone"
                        android:inputType="number"
                        android:textStyle="italic"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="4dp"
                    android:layout_weight="1"
                    android:background="@drawable/result_frame"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:padding="2dp"
                        android:text="@string/tv_weight"
                        android:textColor="#990000"
                        android:textSize="24sp"/>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:background="#990000"/>

                    <TextView
                        android:id="@+id/tv_weight_result"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:paddingBottom="8dp"
                        android:paddingTop="8dp"
                        android:text="@string/tv_result"
                        android:textColor="#990000"
                        android:textSize="36sp"/>

                    <Button
                        android:id="@+id/btn_calculate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="4dp"
                        android:layout_marginRight="4dp"
                        android:text="@string/btn_calculate"/>

                    <Button
                        android:id="@+id/btn_clear"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="4dp"
                        android:layout_marginRight="4dp"
                        android:text="@string/btn_clear"/>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>